<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddCourseFragment" >

    <EditText
        android:id="@+id/editTextCourseNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextCourseNumber"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editTextCourseName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseNumber" />

    <EditText
        android:id="@+id/editTextCreditHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editTextCreditHours"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseName" />

    <TextView
        android:id="@+id/textViewCourseGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewCourseGrade"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreditHours" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:checkedButton="@id/radioButtonA"
        app:layout_constraintStart_toEndOf="@+id/textViewCourseGrade"
        app:layout_constraintTop_toTopOf="@+id/textViewCourseGrade">

        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonA"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonB"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonC"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonD"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonF"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorButtonNormal"
        android:text="@string/buttonSubmit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>