<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewGrade"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCreditHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textViewTitle"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textViewGrade"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewDescription"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewGrade"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewCreditHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewCreditHours"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textViewGrade"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <ImageButton
        android:id="@+id/imageButtonDelete"
        style="@android:style/Widget.ImageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/rubbish_bin"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCreditHours"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>